force-app/main/default/objects/CovidPaisIngreso14__c/CovidPaisIngreso14__c.object-meta.xml
<CustomObject>
    <label>CovidPaisIngreso14</label>
    <nameField>
        <label>CovidPaisIngreso14 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CovidPaisIngreso14s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>