force-app/main/default/objects/CovidPaisIngreso14__c/fields/Fecha_de_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_Ingreso__c</fullName>
    <label>Fecha de Ingreso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>