force-app/main/default/objects/CovidPaisIngreso14__c/fields/Medio_de_Ingreso__c.field-meta.xml
<CustomField>
    <fullName>Medio_de_Ingreso__c</fullName>
    <label>Medio de Ingreso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>