force-app/main/default/objects/CovidPaisIngreso14__c/fields/Pais_Destino__c.field-meta.xml
<CustomField>
    <fullName>Pais_Destino__c</fullName>
    <label>Pais Destino</label>
    <length>255</length>
    <type>Text</type>
</CustomField>