force-app/main/default/objects/CovidPaisIngreso14__c/fields/Vecinos__c.field-meta.xml
<CustomField>
    <fullName>Vecinos__c</fullName>
    <label>Vecinos</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>