force-app/main/default/objects/CovidPaisIngreso14__c/fields/Viajeros__c.field-meta.xml
<CustomField>
    <fullName>Viajeros__c</fullName>
    <label>Viajeros</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>