force-app/main/default/objects/CovidPaisIngreso14__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Pais_Destino__c</columns>
    <columns>Localidad__c</columns>
    <columns>Fecha_de_Ingreso__c</columns>
    <columns>Viajeros__c</columns>
    <columns>Vecinos__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>